cmake_minimum_required(VERSION 3.23)
project(Interview_top101)

set(CMAKE_CXX_STANDARD 17)

add_executable(Interview_top101 main.cpp)

add_executable(BM21 T02_search_sort/BM21.cpp)
add_executable(BM17 T02_search_sort/BM17.cpp)
add_executable(BM19 T02_search_sort/BM19.cpp)
add_executable(BM20 T02_search_sort/BM20.cpp)
add_executable(BM50 T05_hash/BM50.cpp)
add_executable(BM51 T05_hash/BM51.cpp)
add_executable(BM52 T05_hash/BM52.cpp)
add_executable(BM53 T05_hash/BM53.cpp)
add_executable(BM23 T03_binarytree/BM23.cpp)
add_executable(BM24 T03_binarytree/BM24.cpp)